🔖 Release: v5.2.1 버전 릴리즈 (#510)
Fix: Swagger로부터의 요청에서 Authorization 헤더가 누락되던 문제 해소
Refactor: 댓글 API 불필요한 예외 클래스 제거
Rename: 댓글 API CommentStatusType 위치 이동
Rename: 댓글 API CommentOfAuthorPageModel 네이밍 변경
Rename: 댓글 API ReadRepo, WriteRepo 네이밍 변경
Rename: 댓글 API framework 하위 디렉토리 경로 중 persistence 삭제
Refactor: 기타 댓글 API 관련 리팩토링 다수 진행, 테스트 작성 완료
Docs: domain-comment-details.md 파일 최신화
Docs: 테스트 자동화를 위한 Claude Code 문서 개선
Test: 주석 처리되어 있던 테스트 코드가 정상 동작하도록 함