@@ -1,31 +1,28 @@
 package kr.modusplant.domains.comment.domain.vo;
 
-import kr.modusplant.domains.comment.domain.exception.EmptyValueException;
-import kr.modusplant.domains.comment.domain.exception.InvalidValueException;
 import kr.modusplant.domains.comment.domain.exception.enums.CommentErrorCode;
+import kr.modusplant.shared.exception.EmptyValueException;
+import kr.modusplant.shared.exception.InvalidValueException;
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.builder.EqualsBuilder;
 import org.apache.commons.lang3.builder.HashCodeBuilder;
 
 @Getter
 @AllArgsConstructor(access = AccessLevel.PRIVATE)
 public class CommentContent {
-    private final String content;
+    private final String value;
 
-    public static CommentContent create(String content) {
-        CommentContent.validateSource(content);
-        return new CommentContent(content);
-    }
-
-    public static void validateSource(String source) {
-        if(source.isBlank()) {
-            throw new EmptyValueException(CommentErrorCode.EMPTY_COMMENT_CONTENT);
+    public static CommentContent create(String value) {
+        if (StringUtils.isBlank(value)) {
+            throw new EmptyValueException(CommentErrorCode.EMPTY_COMMENT_CONTENT, "content");
         }
-        if(600 < source.length()) {
-            throw new InvalidValueException(CommentErrorCode.INVALID_COMMENT_CONTENT);
+        if (value.length() > 600) {
+            throw new InvalidValueException(CommentErrorCode.INVALID_COMMENT_CONTENT, "content");
         }
+        return new CommentContent(value);
     }
 
     @Override
@@ -35,13 +32,13 @@ public class CommentContent {
         if (!(o instanceof CommentContent commentContent)) return false;
 
         return new EqualsBuilder()
-                .append(getContent(), commentContent.getContent())
+                .append(getValue(), commentContent.getValue())
                 .isEquals();
     }
 
     @Override
     public int hashCode() {
         return new HashCodeBuilder(17, 37)
-                .append(getContent()).toHashCode();
+                .append(getValue()).toHashCode();
     }
 }
